--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "npm run build"
+			"pre-commit": "lint-staged"
 		}
+	},
+	"lint-staged": {
+		"*.{js,json,css,md,html}": [
+			"prettier --single-quote --write",
+			"git add "
+		]
 	},
 	"dependencies": {
 		"next": "12.2.3",
@@ -27,6 +33,7 @@
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
+		"tailwindcss": "^3.1.7",
 		"typescript": "4.7.4"
 	}
 }
