--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,json,css,md,html, jsx, ts, tsx}": [
-      "prettier --single-quote --write",
-      "git add "
-    ]
-  },
-  "dependencies": {
-    "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.6.3",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "eslint": "^8.20.0",
-    "eslint-config-next": "12.2.3",
-    "husky": "^4.3.8",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.7",
-    "typescript": "4.7.4"
-  }
+	"name": "my-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{js, jsx, ts, tsx, json, css, md, html}": [
+			"prettier --single-quote --write",
+			"git add "
+		]
+	},
+	"dependencies": {
+		"next": "12.2.3",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "18.6.3",
+		"@types/react": "18.0.15",
+		"@types/react-dom": "18.0.6",
+		"eslint": "^8.20.0",
+		"eslint-config-next": "12.2.3",
+		"husky": "^4.3.8",
+		"lint-staged": "^13.0.3",
+		"prettier": "^2.7.1",
+		"tailwindcss": "^3.1.7",
+		"typescript": "4.7.4"
+	}
 }
