--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"lint-staged": {
 		"*.{js, jsx, ts, tsx, json, css, md, html}": [
+			"eslint --fix",
 			"prettier --single-quote --write",
 			"git add "
 		]
@@ -28,10 +29,12 @@
 		"@types/node": "18.6.3",
 		"@types/react": "18.0.15",
 		"@types/react-dom": "18.0.6",
+		"autoprefixer": "^10.4.8",
 		"eslint": "^8.20.0",
 		"eslint-config-next": "12.2.3",
 		"husky": "^4.3.8",
 		"lint-staged": "^13.0.3",
+		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"tailwindcss": "^3.1.7",
 		"typescript": "4.7.4"
